# skim

./: .gitignore  AGENTS.md  Cargo.toml  README.md  plan.md  sample.sql
.github/workflows/: ci.yml  large-file-test.yml  release.yml
scripts/: gen_large_sql.py  install.ps1  install.sh
src/: cli.rs  debug_stats.rs  error.rs  main.rs  progress.rs
src/parser/: mod.rs  schema.rs  state_machine.rs  value_parser.rs
src/writer/: csv.rs  json.rs  jsonl.rs  mod.rs  parquet.rs  toml.rs  yaml.rs
tests/: readme_examples.rs
